--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>TEST</title>
 </head>
 <body>
-    <header>Hej</header>
+    <header>
+        <p>hej</p>
+    </header>
     <footer>nedanför</footer>
+
     
 </body>
 </html>
